improve SubmissionFormsLocaleConsistencyTest